[package]
authors = ["ReeceStevens <reecestevens24@gmail.com>"]
name = "f4"
version = "0.1.0"

[dependencies]
bare-metal = "0.1.1"
cortex-m = "0.4.2"
cortex-m-semihosting = "0.2.0"
embedded-hal = "0.1.2"
nb = "0.1.1"
vcell = "0.1.0"

[dependencies.stm32f40x]
features = ["rt"]
optional = false
path = "../stm32f40x"
