[package]
authors = ["Reece Stevens <reecestevens24@gmail.com>"]
name = "f4"
version = "0.1.0"
categories = [
    "embedded",
    "no-std",
]
description = "A hardware abstraction layer for the STM32F4x family of microcontrollers"

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.5.8"
cortex-m-semihosting = "0.3.0"
nb = "0.1.1"
vcell = "0.1.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

[dependencies.stm32f40x]
features = ["rt"]
optional = false
path = "../stm32f40x"
