[package]
authors = ["Reece Stevens <reecestevens24@gmail.com>"]
name = "stm32f40x"
version = "0.1.0"

[dependencies]
# bare-metal = "0.1.1"
bare-metal = "0.2.0"
# cortex-m = "0.4.2"
cortex-m = "0.5.0"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
features = ["device"]
version = "0.6.10"

[features]
rt = ["cortex-m-rt/device"]
